Adicionar meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="4NMy7X_mhXSMESod_NaIZMq08MvJIBP1wZXbVC_KLvE" />
     <title>CodeDrafts | Home</title>
 
     <link rel="stylesheet" type="text/css" href="styles/styleGenerico.css">
