Atualizar portfólio de Daniel

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
         </div>
         <div id="pessoaEquipe">
             <h1>Daniel</h1><br>
-            <a href="https://cc23124.github.io" target="_blank">Cc23124.GitHub.io</a>
+            <a href="https://danieldorigancc.github.io/danielDCC/html/index.html" target="_blank">Cc23124.GitHub.io</a>
 
         </div>
         <div id="pessoaEquipe">
